# acquirust

./: Cargo.toml  README.md
acquiconnect/: Cargo.toml
acquiconnect/src/: lib.rs
acquisim/: Cargo.toml  README.md  requests
acquisim/src/: active_payment.rs  html_gen.rs  interaction_sessions.rs  lib.rs  startup.rs  tasks.rs
acquisim/src/bank/: mod.rs
acquisim/src/domain/: card_number.rs
acquisim/src/domain/requests/: system_api.rs
acquisim/src/domain/responses/: system_api.rs
acquisim/src/routes/: api.rs  html_pages_and_triggers.rs  mod.rs  system.rs
acquisim/src/startup/: mod.rs  tasks.rs
acquisim/templates/: card_token_registration_page.html  index.html  init_payment_page.html
airactions/: Cargo.toml
airactions/src/: lib.rs
backends/acquisim/: Cargo.toml  requests
backends/acquisim-api/: Cargo.toml
backends/acquisim-api/src/: init_payment.rs  lib.rs  register_card_token.rs
backends/acquisim-api/src/init_payment/: beneficiaries.rs  mod.rs
backends/acquisim/src/: html_gen.rs  lib.rs  main.rs  tasks.rs  ws_tracing_subscriber.rs
backends/acquisim/src/bank/: mod.rs
backends/acquisim/src/routes/: api.rs  mod.rs  system.rs
backends/acquisim/src/startup/: mod.rs
backends/acquisim/templates/: index.html
backends/banksim-api/: Cargo.toml  README.md
backends/banksim-api/src/: lib.rs  make_payment.rs  notifications.rs  register_card_token.rs  token_info.rs
backends/banksim-api/src/init_payment/: beneficiaries.rs  mod.rs
backends/banksim-api/src/session/: webhook.rs
backends/mapi/: Cargo.toml
backends/mapi/benches/: bench1.rs
backends/mapi/src/: lib.rs  payment.rs
backends/mapi/src/domain/: email.rs
backends/mapi/src/receipt/: mod.rs
backends/mapi/tests/: common.rs
backends/tinkoff-mapi/: Cargo.toml
backends/tinkoff-mapi/benches/: bench1.rs
backends/tinkoff-mapi/src/: lib.rs  notifications.rs
backends/tinkoff-mapi/src/domain/: kopeck.rs
backends/tinkoff-mapi/src/payment_data/: mod.rs
backends/tinkoff-mapi/src/receipt/: item.rs  mod.rs
backends/tinkoff-mapi/tests/: common.rs
benches/: bench1.rs
mapi/: Cargo.toml
mapi/benches/: bench1.rs
mapi/src/: lib.rs  payment.rs
mapi/src/domain/: country_code.rs  email.rs  kopeck.rs  mod.rs
mapi/src/mapi/: mod.rs  payment.rs
mapi/src/mapi/receipt/: item.rs
mapi/src/receipt/: item.rs  mod.rs
mapi/tests/: common.rs
src/: lib.rs  manager.rs  payment_service.rs
src/domain/: country_code.rs  email.rs  kopeck.rs  mod.rs
src/mapi/: mod.rs  payment.rs
src/mapi/payment/: mod.rs
src/mapi/payment/receipt/: mod.rs
src/mapi/receipt/: item.rs  mod.rs
src/tinkoff/: mod.rs  payment.rs  payment_data.rs
src/tinkoff/payment/: mod.rs
src/tinkoff/payment/receipt/: item.rs  mod.rs
src/tinkoff/payment_data/: mod.rs  receipt.rs
templates/: index.html
tests/: common.rs
