[package]
name = "kopeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", default-features = false, features = [
  "json",
  "rustls-tls",
  "multipart",
  "cookies",
] }
tokio = { version = "1.35.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
rust_decimal = "1.33.1"
uuid = { version = "1.6.1", features = ["v4"] }
url = "2.5.0"
time = { version = "0.3.31", features = ["local-offset", "macros", "parsing"] }


