[package]
name = "acquiconnect"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11.23", default-features = false, features = [
  "json",
  # "rustls-tls",
  # "multipart",
  "cookies",
] }
thiserror = "1.0.56"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
