[package]
name = "airactions"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Main trait and client for acquirust"
repository = "https://github.com/ghashy/acquirust"


[dependencies]
reqwest = { version = "0.11.24", default-features = false, features = [
  "json",
] }
thiserror = "1.0.56"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = [
  "macros",
  "rt-multi-thread",
] }
