[package]
name = "banksim-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Client for interaction with acquisim instance"
repository = "https://github.com/ghashy/acquirust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airactions = { path = "../../airactions" }

# Serialization-related dependencies
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Utility and miscellaneous dependencies
url = { version = "2.5.0", features = ["serde"] }
rust_decimal = "1.33.1"

# Security
secrecy = { version = "0.8.0", features = ["serde"] }
sha2 = "0.10.8"
